Fixed navbar toggler being off center and changed background color

--- a/src/components/nav/navigation.css
+++ b/src/components/nav/navigation.css
@@ -51,3 +51,9 @@
 .active {
   color: var(--nav-background) !important;
 }
+
+.navbar-toggler {
+  display: block;
+  margin: auto;
+  background-color: var(--nav-text);
+}
